--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase": "^9.17.2",
-    "firebase-admin": "^11.5.0"
+    "firebase-admin": "^11.5.0",
+    "serverless-http": "^3.1.1"
   }
 }
