--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node srv_auth.js",
-    "auth1": "node auth.js"
+    "test": "node index.js",
+    "auth1": "node auth.js",
+    "start": "./node_modules/.bin/netlify-lambda serve src",
+    "build": "./node_modules/.bin/netlify-lambda build src",
+    "build2": "webpack"
   },
   "author": "NPWS",
   "license": "ISC",
@@ -17,6 +20,14 @@
     "express": "^4.18.2",
     "firebase": "^9.17.2",
     "firebase-admin": "^11.5.0",
+    "netlify-lambda": "^2.0.16",
     "serverless-http": "^3.1.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^9.1.2",
+    "webpack-cli": "^5.0.1"
   }
 }
